added code to HTML file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
   <li>git status: checks what branch we are currently on</li>
   <li>git checkout -b branch-name: creates a new branch and switches to it</li></li>
   <li>it's important to frequently sync the local version of your code with the remote version in GitHub. This matters, especially when working on a team, so that a functional, updated version of the project can be shared and accessed by all team members. Working on an outdated or stale version can lead to big sync problems. That's why it is best practice to resolve and iterate on smaller changes, rather than wait for an accumulation of many small and large changes, which could complicate conflict resolution and debugging.</li>
-        <li>We use the add -A command to commit all files in the working branch.</li>  </ul>
+  <li>We use the add -A command to commit all files in the working branch.</li>  
+<li>We use the -m flag to associate a message with our commit. Commit messages should be short descriptive messages of the changes implemented. Once completed, our Git repository is now up to date with our working directory!</li>
+<li> git pull origin main makes sure the current branch is up to date before opening a pull request.</li>
+<li>It is a good habit to always pull the base branch into your feature branch before pushing up any code</li>
+</ul>
         </section>
      
         <section class="card" id="javascript-section">
