added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,8 +28,9 @@
       <section  class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
-        </ul><li>The head element contains information about the webpage.</li>
+        <li>Enter your HTML notes here</li>
+        </ul>
+        <li>The head element contains information about the webpage.</li>
         <li>The body element represents the visible content shown to the user.</li>
         <li>The Section elements are semantic elements that define a section in a document that contains thematic content and help us to elegantly organize the content based on the topics.          
         <li>We want to cover major topics for HTML, CSS, Git, and JavaScript</li>
@@ -39,11 +41,21 @@
 
           </li><li>This is fun!</li>
         </li>
+      </section>
         <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
             <li>Enter your CSS notes here</li>
           </ul>
+
+          <ul>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>When a developer wants to style an element directly in the HTML file, they use inline CSS.</li>
+            <li>The most common way to style a webpage is by using an external CSS style sheet.</li>
+            <li> allows developers to keep all their CSS rules in a separate file, which makes design changes easier.</li>  
+            <li> it is important to know that every HTML element is essentially a box.</li>
+            <li> it is important to know that every HTML element is essentially a box.-CSS Box Model</li>          </ul>
         </section>
      
         <section class="card" id="git-section">
